--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.12MB/s(Youtube:不良林), server: xmrh012.xmrth-node.xyz, port: 15885, type: vmess, uuid: e23a5542-8e62-3572-9afb-6640d61d91b1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: 87318706-ws.va.huya.com}}
-  - {name: 🇨🇳 中国-544.7KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-949.7KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-435.7KB/s(Youtube:不良林), server: 185.160.26.160, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-1.67MB/s(Youtube:不良林), server: trojan3.udpgw.com, port: 443, type: trojan, password: 8db1b560-019d-11ed-8bdf-1239d0255272, sni: trojan3.udpgw.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-366.3KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-301.9KB/s(Youtube:不良林), server: 5.188.0.151, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-1.43MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20000, type: trojan, password: 0654731b-e414-4031-962d-be4c8e9579c8, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-483.3KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
   - {name: 🇨🇳 中国-495.5KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇺🇸 美国-1.19MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.31MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
+  - {name: 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇺🇸 美国-1.12MB/s(Youtube:不良林), server: xmrh012.xmrth-node.xyz, port: 15885, type: vmess, uuid: e23a5542-8e62-3572-9afb-6640d61d91b1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: 87318706-ws.va.huya.com}}
+  - {name: 🇨🇳 中国-3.14MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-874.6KB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-877.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-682.4KB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-9.63MB/s(Youtube:不良林), server: 116.63.103.11, port: 45184, type: vmess, uuid: 6e1f3915-d1bb-4ded-81c7-32043e254592, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.63.103.11}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-544.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-949.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-435.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-366.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-301.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-483.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-495.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-874.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-877.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-682.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.63MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-544.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-949.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-435.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-366.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-301.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-483.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-495.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-874.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-877.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-682.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.63MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-544.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-949.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-435.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-366.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-301.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-483.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-495.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-874.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-877.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-682.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.63MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-544.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-949.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-435.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-366.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-301.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-483.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-495.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-874.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-877.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-682.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.63MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-544.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-949.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-435.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-366.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-301.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-483.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-495.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-874.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-877.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-682.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.63MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-544.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-949.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-435.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-366.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-301.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-483.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-495.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-874.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-877.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-682.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.63MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-544.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-949.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-435.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-366.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-301.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-483.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-495.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-874.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-877.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-682.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.63MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
