--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-495.5KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇭🇰 香港-708.8KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 (已存活9天)香港-3.60MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
   - {name: 🇺🇸 美国-1.19MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-1.31MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇺🇸 美国-1.12MB/s(Youtube:不良林), server: xmrh012.xmrth-node.xyz, port: 15885, type: vmess, uuid: e23a5542-8e62-3572-9afb-6640d61d91b1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: 87318706-ws.va.huya.com}}
-  - {name: 🇨🇳 中国-3.14MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-874.6KB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-877.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-682.4KB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-9.63MB/s(Youtube:不良林), server: 116.63.103.11, port: 45184, type: vmess, uuid: 6e1f3915-d1bb-4ded-81c7-32043e254592, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.63.103.11}}
+  - {name: 🇯🇵 日本-230.9KB/s(Youtube:不良林), server: 185.160.26.160, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-495.5KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇸🇬 新加坡-3.09MB/s(Youtube:不良林), server: gz2.tinkhub.me, port: 443, type: vmess, uuid: fa76e450-e663-45ac-b134-9038c5b052dc, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: gz2.tinkhub.me}}
+  - {name: 🇸🇬 新加坡-2.07MB/s(Youtube:不良林), server: gz2.tinkhub.me, port: 443, type: vmess, uuid: 9419a52d-b04c-4ca6-84fc-f0497f7f4699, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: gz2.tinkhub.me}}
+  - {name: 🇸🇬 新加坡-957.2KB/s(Youtube:不良林), server: gz2.tinkhub.me, port: 443, type: vmess, uuid: df86f7c5-79ed-45b7-bc7d-c6759253abbd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: gz2.tinkhub.me}}
+  - {name: 🇫🇷 法国-1.55MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇰🇷 韩国-751.6KB/s(Youtube:不良林), server: hk09.bp777.buzz, port: 21665, type: vmess, uuid: bc6cd945-e98e-44bf-acc6-96374f7d4d60, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hk09.bp777.buzz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-495.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-708.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-874.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-877.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-682.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-230.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-495.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.09MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-957.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-751.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-495.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-708.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-874.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-877.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-682.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-230.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-495.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.09MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-957.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-751.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-495.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-708.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-874.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-877.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-682.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-230.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-495.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.09MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-957.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-751.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
+      - 🇭🇰 香港-708.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.60MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-495.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-708.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-874.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-877.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-682.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-230.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-495.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.09MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-957.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-751.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-495.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-708.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-874.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-877.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-682.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-230.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-495.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.09MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-957.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-751.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-495.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-708.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-874.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-877.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-682.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-230.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-495.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.09MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-957.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-751.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-495.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-708.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-874.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-877.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-682.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-230.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-495.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.09MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-957.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-751.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
